<resources>
    <string name="app_name">Android102</string>
    <string name="btnStart">start</string>
    <string name="btnStop">Stop</string>
    <string name="btnReset">Reset</string>
    <string name="txtQuestion">Question</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
</resources>
